Changes in version 1.0
----------------------

* Forked Uncommons Antlib 0.3.3 and removed DocBook and Maven support.